--- a/package.json
+++ b/package.json
@@ -1,24 +1,61 @@
 {
   "name": "support-ticket-module",
-  "description": "LiveACID Support Ticket Module",
-  "version": "1.0.0",
+  "description": "Module for support ticket submital including react components and routes",
+  "author": "LiveACID Software",
+  "version": "0.1.0",
   "private": false,
-  "type": "module",
-  "scripts": {
-    "test": "node index.js"
+  "exports": {
+    ".": "./dist/index.js",
+    "./api": "./api/routes.js"
   },
-  "engines": {
-    "node": "16.13.2"
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/liveacid-software/support-ticket-module.git"
   },
   "dependencies": {
-    "dotenv": "^16.0.1",
-    "formik": "^2.2.9",
-    "mongoose": "^5.13.14"
+    "@babel/polyfill": "^7.12.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.1.10",
+    "node-sass": "^7.0.3",
+    "web-vitals": "^1.1.2"
   },
-  "main": "index.js",
-  "directories": {
-    "test": "test"
+  "scripts": {
+    "start": "react-scripts start",
+    "test": "react-scripts test",
+    "sass": "node-sass src/lib/components/styles/main.scss src/App.css -w",
+    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files",
+    "eject": "react-scripts eject"
   },
-  "author": "",
-  "license": "ISC"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.19.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.19.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^5.0.1"
+  }
 }
