--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "LiveACID Software",
   "version": "0.1.0",
   "private": false,
+  "main": "./index.js",
   "exports": {
     ".": "./dist/index.js",
     "./api": "./api/routes.js"
@@ -21,6 +22,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "node-sass": "^7.0.3",
     "web-vitals": "^1.1.2"
   },
