--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.27.2",
+    "express": "^4.18.1",
     "formik": "^2.2.9",
     "web-vitals": "^1.1.2"
   },
