--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "express": "^4.18.1",
     "formik": "^2.2.9",
+    "mongoose": "^6.6.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
