--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.1.10",
-    "express": "4.x",
+    "axios": "^0.24.0",
+    "express": "^4.18.1",
     "formik": "^2.2.9",
     "web-vitals": "^1.1.2"
   },
   "peerDependencies": {
-    "axios": "0.x",
-    "express": "4.x",
     "mongoose": "5.x"
   },
   "scripts": {
