add call to GitHub to create an issue

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,20 @@ SMTP_PORT=
 SMTP_PASSWORD= 
 SENDGRID_API_USER= 
 SENDGRID_API_KEY= 
+GITHUB_ISSUE_REPO_PATH=
+GITHUB_TOKEN=
+
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
+MONGODB_PROTOCOL=mongodb
+MONGODB_HOSTNAME=localhost
+MONGODB_PARAMS=
+MONGODB_PORT=
+MONGODB_DATABASE=ruralstaging
+MONGODB_SSL=
+MONGODB_CA_CERT=
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PASSWORD=bjopwioxvjyzozdj
+SMTP_PORT=587
+SMTP_USERNAME=liveacid.gitlab@gmail.com
