--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "web-vitals": "^1.1.2"
   },
   "peerDependencies": {
-    "axios": "0.x",
+    "axios": "^0.27.2",
     "express": "4.x",
     "mongoose": "5.x",
     "nodemailer": "6.x",
@@ -34,6 +34,7 @@
   "scripts": {
     "start": "react-scripts start",
     "test": "react-scripts test",
+    "test:mocha": "mocha",
     "sass": "node-sass src/lib/components/styles/main.scss src/App.css -w",
     "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files",
     "eject": "react-scripts eject"
@@ -61,8 +62,13 @@
     "@babel/core": "^7.19.1",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.19.1",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.0.0",
+    "mock-express-response": "^0.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "sinon": "^14.0.0"
   }
 }
