--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "./router": "./api/routes.js",
     "./controller": "./api/controller.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/liveacid-software/support-ticket-module.git"
+  },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.16.5",
