--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "web-vitals": "^1.1.2"
   },
   "peerDependencies": {
-    "axios": "^0.27.2",
+    "axios": "0.x",
     "express": "4.x",
     "mongoose": "5.x",
     "nodemailer": "6.x",
