--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,6 @@ MONGODB_SSL=
 MONGODB_CA_CERT=
 
 SMTP_HOST=smtp.gmail.com
-SMTP_PASSWORD=bjopwioxvjyzozdj
-SMTP_PORT=587
-SMTP_USERNAME=liveacid.gitlab@gmail.com
+SMTP_PASSWORD=
+SMTP_PORT=
+SMTP_USERNAME=
