--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
 EMAIL_FROM=
 EMAIL_DEFAULT_TO=
+
 SMTP_USERNAME=
 SMTP_HOST=
 SMTP_PORT=
 SMTP_PASSWORD= 
+
 SENDGRID_API_USER= 
 SENDGRID_API_KEY= 
+
 GITHUB_ISSUE_REPO_PATH=
 GITHUB_TOKEN=
 
@@ -15,7 +18,7 @@ MONGODB_PROTOCOL=mongodb
 MONGODB_HOSTNAME=localhost
 MONGODB_PARAMS=
 MONGODB_PORT=
-MONGODB_DATABASE=ruralstaging
+MONGODB_DATABASE=
 MONGODB_SSL=
 MONGODB_CA_CERT=
 
