--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "bootstrap": "^5.3.0",
     "formik": "^2.2.9",
     "react-bootstrap": "^2.8.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^1.2.0"
   },
   "peerDependencies": {
     "axios": "0.x",
