--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.3.0",
     "formik": "^2.2.9",
+    "multer": "^1.4.5-lts.1",
     "react-bootstrap": "^2.8.0",
     "web-vitals": "^1.1.2",
     "yup": "^1.2.0"
