--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.0",
     "formik": "^2.2.9",
     "multer": "^1.4.5-lts.1",
+    "octokit": "^3.0.0",
     "react-bootstrap": "^2.8.0",
     "web-vitals": "^1.1.2",
     "yup": "^1.2.0"
