--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.3.0",
     "formik": "^2.2.9",
-    "multer": "^1.4.5-lts.1",
-    "octokit": "^3.0.0",
     "react-bootstrap": "^2.8.0",
     "web-vitals": "^1.1.2",
     "yup": "^1.2.0"
@@ -32,6 +30,7 @@
   "peerDependencies": {
     "axios": "0.x",
     "express": "4.x",
+    "express-fileupload": "1.x",
     "mongoose": "5.x",
     "nodemailer": "6.x",
     "nodemailer-sendgrid-transport": "0.x"
